<resources>
    <string name="app_name">Shared prefrences</string>
    <string name="enter_name">Enter Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Name">Enter Full Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="save">Save</string>
    <string name="welcome">WELCOME</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="Home">home</string>
    <string name="History">history</string>
    <string name="Profile">profile</string>
    <string name="Setting">setting</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="today_news">Today News</string>
    <string name="description">Description</string>
</resources>